# generic-deriving-extras

./: README.md  generic-deriving-extras.cabal
examples/: Dept.hs  Term.hs
src/: Fold2Example.hs  HFunExample.hs  Test.hs
src/Generics/Deriving/: Compos.hs  Data.hs  Fold.hs  Fold1.hs  Fold2.hs  Fold2_5.hs  HFunctor.hs  Query.hs  Query1.hs  Transform.hs  Util.hs  Zipper.hs  Zipper1.hs
src/Generics/Deriving/Zipper/: Base.hs  Context.hs  Trace.hs  Trace1.hs  Trace2.hs  Trace3.hs
src/Generics/Deriving/Zipper1/: Context.hs
