name:                   generic-deriving-extras
version:                0
synopsis:               Numerous generic functions using generic-deriving
description:            To be written
category:               Generics
copyright:              2012 Sean Leather
license:                BSD3
license-file:           LICENSE
author:                 Sean Leather
maintainer:             sean.leather@gmail.com
stability:              experimental
build-type:             Simple
cabal-version:          >= 1.6

source-repository head
  type: git
  location: https://github.com/spl/generic-deriving-extras

library
  hs-source-dirs:       src
  build-depends:        base < 5,
                        ghc-prim >= 0.2 && < 0.3,
                        generic-deriving >= 1.2 && < 1.4
  ghc-options:          -Wall
  exposed-modules:      Generics.Deriving.Query
                        Generics.Deriving.Transform

